# usecallmanager-daemons

./: .env.example  .gitignore  .pylintrc  Makefile  capfc  capfd  docker-compose.yml  pyproject.toml  tvsc  tvsd
docker/capf/: Dockerfile
docker/tvs/: Dockerfile
docs/: .dockerignore  Dockerfile  astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: index.mdx  installation.mdx
frontend/: .env.example  Dockerfile  astro.config.mjs  package-lock.json  package.json
frontend/src/components/certificates/: CertificateActions.tsx  CertificateUploadForm.tsx
frontend/src/components/dashboard/: QuickActions.tsx  ServiceHealth.tsx  (+1 more)
frontend/src/content/: config.ts
frontend/src/layouts/: BaseLayout.astro  DashboardLayout.astro  DocsLayout.astro
frontend/src/pages/: index.astro  issuer-certificate.astro  security-tools.astro
frontend/src/styles/: global.css
src/usecallmanager_capf/: __init__.py  __main__.py  config.py  service.py
src/usecallmanager_capf/api/: __init__.py  app.py  routes.py  schemas.py
src/usecallmanager_capf/db/: __init__.py  database.py  models.py  repository.py
src/usecallmanager_capf/protocol/: __init__.py  constants.py  server.py
src/usecallmanager_capf/security/: __init__.py  encryption.py  itl.py  tlv.py
src/usecallmanager_tvs/: __init__.py  __main__.py  config.py  service.py
src/usecallmanager_tvs/api/: __init__.py  app.py  routes.py  schemas.py
src/usecallmanager_tvs/db/: __init__.py  database.py  models.py  repository.py
src/usecallmanager_tvs/protocol/: __init__.py  constants.py  server.py
(+54 files in other folders)
