[project]
name = "usecallmanager-daemons"
version = "4.0.0"
description = "Security daemons for Cisco IP phones (TVS and CAPF)"
readme = "README.md"
license = {text = "GPL-2.0"}
authors = [
    {name = "Ryan Malloy", email = "ryan@supported.systems"},
    {name = "Gareth Palmer", email = "gareth.palmer3@gmail.com"},
]
requires-python = ">=3.11"
dependencies = [
    "cryptography>=43.0.0",
    "sqlalchemy>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[project.scripts]
usecallmanager-tvs = "usecallmanager_tvs:main"
usecallmanager-capf = "usecallmanager_capf:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/usecallmanager_tvs", "src/usecallmanager_capf"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
